Fixed extra padding

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(6, 200px);
-  padding: 50px 5px;
+  padding: 50px 5px 0 5px;
 }
 
 .timeline {
